--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,17 @@
     <title>Q3 News - Makes you Think Faster..</title>
   </head>
   <body>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- myad1 -->
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-2637533788201978"
+           data-ad-slot="1616358173"
+           data-ad-format="auto"
+           data-full-width-responsive="true"></ins>
+      <script>
+           (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script data-ad-client="ca-pub-2637533788201978" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <div id="root"></div>
